fix: remove extra padding from the input

--- a/src/main/resources/META-INF/resources/frontend/chat/Chat.css
+++ b/src/main/resources/META-INF/resources/frontend/chat/Chat.css
@@ -117,6 +117,15 @@
   color: var(--lumo-body-text-color);
 }
 
+.vaadin-chat-component .input::part(input-field) {
+  padding-block: 0;
+}
+
+.vaadin-chat-component .input textarea {
+  align-self: auto;
+  padding-block: var(--lumo-space-s);
+}
+
 .vaadin-chat-component .input-container {
   box-sizing: border-box;
   width: 100%;
